.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:00:54 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
13:00:59 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
13:02:42 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
16:58:55 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
coordinator.cc
Creating executable: ../out/clang-release/src/NetworksProject.exe
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
16:59:04 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
17:00:18 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
17:09:41 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
coordinator.cc
coordinator.cc:16:17: warning: using directive refers to implicitly-defined namespace 'std'
using namespace std;
                ^
1 warning generated.
Node0.cc
Creating executable: ../out/clang-release/src/NetworksProject.exe
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
17:12:53 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
coordinator.cc
coordinator.cc:16:17: warning: using directive refers to implicitly-defined namespace 'std'
using namespace std;
                ^
1 warning generated.
Creating executable: ../out/clang-release/src/NetworksProject.exe
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
17:15:06 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
coordinator.cc
coordinator.cc:16:17: warning: using directive refers to implicitly-defined namespace 'std'
using namespace std;
                ^
1 warning generated.
Creating executable: ../out/clang-release/src/NetworksProject.exe
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
17:19:38 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
Node0.cc
Creating executable: ../out/clang-release/src/NetworksProject.exe
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
17:21:40 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
Node0.cc
Creating executable: ../out/clang-release/src/NetworksProject.exe
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
17:23:51 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
coordinator.cc
coordinator.cc:16:17: warning: using directive refers to implicitly-defined namespace 'std'
using namespace std;
                ^
In file included from coordinator.cc:17:
In file included from ./coordinator.h:20:
./global.h:17:10: fatal error: 'filesystem' file not found
#include <filesystem>
         ^~~~~~~~~~~~
1 warning and 1 error generated.
make[1]: *** [Makefile:105: ../out/clang-release/src/coordinator.o] Error 1
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
make: *** [Makefile:2: all] Error 2
"make MODE=release all" terminated with exit code 2. Build might be incomplete.
17:27:41 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
coordinator.cc
coordinator.cc:16:17: warning: using directive refers to implicitly-defined namespace 'std'
using namespace std;
                ^
1 warning generated.
Node0.cc
Creating executable: ../out/clang-release/src/NetworksProject.exe
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
17:36:57 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
coordinator.cc
coordinator.cc:16:17: warning: using directive refers to implicitly-defined namespace 'std'
using namespace std;
                ^
coordinator.cc:57:36: error: no matching constructor for initialization of 'Message'
    Message *coordinator_msg1= new Message(coordinator_msg);
                                   ^       ~~~~~~~~~~~~~~~
./Message_m.h:56:5: note: candidate constructor not viable: no known conversion from 'Message *' to 'const Message' for 1st argument; dereference the argument with *
    Message(const Message& other);
    ^
./Message_m.h:55:5: note: candidate constructor not viable: no known conversion from 'Message *' to 'const char *' for 1st argument
    Message(const char *name=nullptr, short kind=0);
    ^
1 warning and 1 error generated.
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
make[1]: *** [Makefile:105: ../out/clang-release/src/coordinator.o] Error 1
make: *** [Makefile:2: all] Error 2
"make MODE=release all" terminated with exit code 2. Build might be incomplete.
17:37:43 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
coordinator.cc
coordinator.cc:16:17: warning: using directive refers to implicitly-defined namespace 'std'
using namespace std;
                ^
coordinator.cc:57:47: error: member reference type 'Message *' is a pointer; did you mean to use '->'?
    Message *coordinator_msg1= coordinator_msg.dup();
                               ~~~~~~~~~~~~~~~^
                                              ->
1 warning and 1 error generated.
make[1]: *** [Makefile:105: ../out/clang-release/src/coordinator.o] Error 1
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
make: *** [Makefile:2: all] Error 2
"make MODE=release all" terminated with exit code 2. Build might be incomplete.
17:38:09 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
coordinator.cc
coordinator.cc:16:17: warning: using directive refers to implicitly-defined namespace 'std'
using namespace std;
                ^
1 warning generated.
Node0.cc
Creating executable: ../out/clang-release/src/NetworksProject.exe
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
17:39:16 **** Incremental Build of configuration release for project NetworksProject ****
make MODE=release all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
coordinator.cc
coordinator.cc:16:17: warning: using directive refers to implicitly-defined namespace 'std'
using namespace std;
                ^
1 warning generated.
Creating executable: ../out/clang-release/src/NetworksProject.exe
make[1]: Leaving directory '/c/Users/ranaa/Senior-1/1st/Networks/Network-1-Project/NetworksProject/src'
